# ESP_MKB

./: .gitignore  .gitmodules  ESP-MKB.code-workspace  README.md  sdkconfig
.github/workflows/: build.yml
Hardware/: readme.md
Software/ESP_MKB_Arduino/: README.md
app/win/: Program.cs  WindowsMCSServer.csproj  readme.md
companion_apps/windows_mcs_server/: WindowsMCSServer.csproj  app.manifest  build.bat
docs/: ai_state.md
firmware/: CMakeLists.txt  partitions.csv  patches.cmake  sdkconfig  sdkconfig.default
firmware/components/esp32-TCA8418/: Adafruit_TCA8418.cpp  Adafruit_TCA8418.h  CMakeLists.txt
firmware/components/esp32-bq27441/: CMakeLists.txt  bq27441.c  bq27441.h  bq27441_constants.h
firmware/main/: CMakeLists.txt  bluetoothFunctions.cpp  buttons.json  fileFunctions.cpp  functions.cpp  idf_component.yml  init.h  mcs_client.h  menuFunctions.cpp  pinDef.h  setupFunctions.cpp  setupFunctions.h
firmware/main/ui/: .eez-project-build  ESP_MKB.eez-project-ui-state  button_labels.cpp  button_labels.h  images.c  screens.h  styles.c  styles.h  ui.c  ui_image_album.c  ui_image_bt_on.c  ui_image_charging_white.c  ui_image_wifi_off.c  ui_image_wifi_on.c  vars.cpp  vars.h
main/: ble_config.cpp  ble_config.h  bluetoothFunctions.cpp  bluetoothFunctions.h  fileFunctions.cpp  fileFunctions.h  functions.cpp  functions.h  icons.h  index.html  init.cpp  lv_conf.h  main.cpp  mcs_client.cpp  menu.json  menuFunctions.cpp  menuFunctions.h  setupfunctions.h  webFunctions.h
main/ui/: ESP_MKB.eez-project  images.h  screens.c  ui.h  ui_esp32.cpp  ui_image_bt_off.c  ui_image_charging_black.c  ui_image_noart.c  ui_image_pcb.c
